@@ -328,6 +328,11 @@ void request_send_nonblock(struct fuse_conn *fc, struct fuse_req *req,
  */
 int fuse_do_getattr(struct inode *inode);
 
+/**
+ * Write dirty pages
+ */
+void fuse_sync_inode(struct inode *inode);
+
 /*
  * Local Variables:
  * indent-tabs-mode: t
