@@ -1,3 +1,8 @@
+2004-07-04  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Fix race between truncate and writepage (fsx-linux now runs
+	without error)
+
 2004-07-02  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Fix kernel hang on mkfifo under 2.4 kernels (spotted and patch
